--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -3,8 +3,8 @@
     --secondary-color: #2a86c4;
     --accent-color: #e74c3c;
     --text-color: #333;
-    --bg-color: #eaeaea;
-    --section-bg: #eaeaea;
+    --bg-color: #e8e8e8;
+    --section-bg: #e8e8e8;
     --border-color: #e0e0e0;
     --header-height: 100px;
     --header-bg: #fafafa;
