Comment out color palette inclusion in default layout to streamline HTML structure.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 {% include head.html %}
 <body>
-    {% include color-palette.html %}
+    {% comment %}{% include color-palette.html %}{% endcomment %}
     {% include header.html %}
     {% include side-menu.html %}
     
