Update footer content: Replace GitHub link with physical address for KAIST, enhancing footer information relevance.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,6 @@
 <footer class="site-footer">
     <div class="footer-container">
         <p>&copy; {{ site.time | date: "%Y" }} {{ site.title }}. All rights reserved.</p>
-        {% if site.github_username %}
-        <p>
-            <a href="https://github.com/{{ site.github_username }}" target="_blank" rel="noopener">GitHub</a>
-        </p>
-        {% endif %}
+        <p>KAIST 291 Daehak-ro, Yuseong-gu, Daejeon 34141, Republic of Korea</p>
     </div>
 </footer>
