--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,7 +33,26 @@
     {% endif %}
     
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="{{ "/assets/images/favicon.ico" | relative_url }}">
+    <!-- Standard favicons -->
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ "/assets/images/favicons/favicon-16x16.png" | relative_url }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ "/assets/images/favicons/favicon-32x32.png" | relative_url }}">
+    <link rel="icon" type="image/png" sizes="96x96" href="{{ "/assets/images/favicons/favicon-96x96.png" | relative_url }}">
+    <link rel="icon" type="image/x-icon" href="{{ "/assets/images/favicons/favicon.ico" | relative_url }}">
+    
+    <!-- Apple Touch Icons -->
+    <link rel="apple-touch-icon" sizes="72x72" href="{{ "/assets/images/favicons/apple-icon-72x72.png" | relative_url }}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ "/assets/images/favicons/apple-icon-180x180.png" | relative_url }}">
+    
+    <!-- Android Icons -->
+    <link rel="icon" type="image/png" sizes="36x36" href="{{ "/assets/images/favicons/android-icon-36x36.png" | relative_url }}">
+    <link rel="icon" type="image/png" sizes="72x72" href="{{ "/assets/images/favicons/android-icon-72x72.png" | relative_url }}">
+    <link rel="icon" type="image/png" sizes="192x192" href="{{ "/assets/images/favicons/android-icon-192x192.png" | relative_url }}">
+    
+    <!-- Microsoft Tiles -->
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="{{ "/assets/images/favicons/ms-icon-150x150.png" | relative_url }}">
+    <meta name="msapplication-square70x70logo" content="{{ "/assets/images/favicons/ms-icon-70x70.png" | relative_url }}">
+    <meta name="msapplication-square150x150logo" content="{{ "/assets/images/favicons/ms-icon-150x150.png" | relative_url }}">
     
     <!-- Stylesheets -->
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
