--- a/_sass/_publications.scss
+++ b/_sass/_publications.scss
@@ -293,7 +293,7 @@
 }
 
 .publication-item .venue {
-    color: var(--secondary-color);
+    color: var(--primary-color);
     font-weight: 600;
     margin-bottom: 5px;
 }
