--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,12 @@
     </main>
 
     {% include footer.html %}
+    
+    <!-- Scroll to Top Button -->
+    <button class="scroll-to-top" id="scrollToTop" aria-label="Scroll to top">
+        <img src="{{ '/assets/images/icons/arrow_up_icon.svg' | relative_url }}" alt="Up" class="scroll-to-top-icon">
+    </button>
+    
     {% include scripts.html %}
 </body>
 </html>
