--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,5 +14,6 @@
 @import "photos";
 @import "recruit";
 @import "footer";
+@import "scroll-to-top";
 @import "responsive";
 @import "color-palette";
